// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InfoPanelLabel should match snapshot for default label 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-f0ql1y"
    >
      Default label content
    </div>
  </div>
</body>
`;

exports[`InfoPanelLabel should match snapshot for label with title 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-f0ql1y"
    >
      Label with info icon
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-icon--name-info rcx-icon rcx-css-1mno5tl"
        title="This is helpful information about the label"
      >
        
      </i>
    </div>
  </div>
</body>
`;
